{
    "name": "GameInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "911c51fd-925f-4993-9934-798e1553c336",
            "actions": [
                {
                    "name": "LeftPlayerRoll",
                    "type": "Button",
                    "id": "e9c10914-e2b5-40eb-b3e8-6e916f3f7ef1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftPlayerSwap",
                    "type": "Button",
                    "id": "153bbe37-10cd-4696-941c-c2e158f1cbcb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPlayerRoll",
                    "type": "Button",
                    "id": "57d97b43-af09-40fa-9714-f7d8b5a3b798",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPlayerSwap",
                    "type": "Button",
                    "id": "9376f2bf-2d9f-4f3f-a791-68b71df35eb1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "878a0cfb-13b1-43cc-93ea-5c330a38798b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21045c30-7f8d-4bbe-ab2d-e00c046493c1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard + Mouse",
                    "action": "LeftPlayerRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0ab3e8c-c4c8-46a8-aa9e-78c507b65d23",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard + Mouse",
                    "action": "LeftPlayerSwap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "110d3108-5f99-4b1b-873b-e1c18d217f47",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard + Mouse",
                    "action": "RightPlayerRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aef9c09-7a07-4618-b690-9bb28932ff08",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard + Mouse",
                    "action": "RightPlayerSwap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bde5b887-5100-415b-9f97-28059f4d806b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard + Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard + Mouse",
            "bindingGroup": "Keyboard + Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}